[Fix] content overflow if website got translated - sponsor item in navbar of desktop view - description in sponsor page - buttons in home page
p.s. just a simple fix that makes it seems to work

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -57,22 +57,6 @@
     font-size: 15pt;
   }
 }
-@mixin headerLinksWidth {
-  width: 500px;
-
-  @media screen and (min-width: $max-width-big) {
-    width: 500px;
-  }
-  @media screen and (min-width: $max-width-big-0) {
-    width: 680px;
-  }
-}
-@mixin headerLinksMarginRight {
-  margin-right: 92px;
-  @media screen and (max-width: $max-width-medium-0) {
-    margin-right: -35px;
-  }
-}
 @mixin headerLinksLiPadding {
   padding: 22px 20px;
   @media screen and (max-width: $max-width-medium-0) {
@@ -479,9 +463,8 @@
     }
 
     @include fontFamily-bold;
-    @include headerLinksWidth;
     float: right;
-    @include headerLinksMarginRight;
+    margin-right: 125px;
     height: 100%;
     height: 50px;
     top: 6px;
